--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ PRISMA_SECRET="un432æ.asd^23"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_123youchanget his"
 PORT=4444
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT=2525
+MAIL_USER="0927f26b7cbe1e"
+MAIL_PASS="570b5e065692c6"
