# 9.4 Displaying Single Orders

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PRISMA_ENDPOINT="https://eu1.prisma.sh/carlos-loureda-8b31b2/loushop-backend/dev
 FRONTEND_URL="http://localhost:7777"
 PRISMA_SECRET="un432æ.asd^23"
 APP_SECRET="jwtsecret123"
-STRIPE_SECRET="sk_test_Uo6an5gsS73lAjfaHgdNjwBM;"
+STRIPE_SECRET="sk_test_Uo6an5gsS73lAjfaHgdNjwBM"
 PORT=4444
 MAIL_HOST="smtp.mailtrap.io"
 MAIL_PORT=2525
