--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -3,7 +3,7 @@ datamodel: datamodel.prisma
 generate:
   - generator: javascript-client
     output: ./src/generated/prisma-client/
-# secret: ${env:PRISMA_SECRET}
+secret: ${env:PRISMA_SECRET}
 hooks:
   post-deploy:
     - graphql get-schema -p prisma
