config: Adding environment variable for production endpoint for heroku

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-PRISMA_ENDPOINT="https://eu1.prisma.sh/carlos-loureda-8b31b2/loushop-backend/dev"
+# PRISMA_ENDPOINT="https://eu1.prisma.sh/carlos-loureda-8b31b2/loushop-backend/dev"
+PRISMA_ENDPOINT="https://loushop-production-58dfdbc708.herokuapp.com/loushop-production/prod"
 FRONTEND_URL="http://localhost:7777"
 PRISMA_SECRET="un432æ.asd^23"
 APP_SECRET="jwtsecret123"
