--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 # PRISMA_ENDPOINT="https://eu1.prisma.sh/carlos-loureda-8b31b2/loushop-backend/dev"
 PRISMA_ENDPOINT="https://loushop-production-58dfdbc708.herokuapp.com/loushop-production/prod"
-FRONTEND_URL="http://localhost:7777"
+# FRONTEND_URL="http://localhost:7777"
+FRONTEND_URL="https://loushop-react-prod.herokuapp.com/"
 PRISMA_SECRET="un432æ.asd^23"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_test_Uo6an5gsS73lAjfaHgdNjwBM"
