disabling db init for production

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 PRISMA_ENDPOINT="https://loushop-production-58dfdbc708.herokuapp.com/loushop-production/prod"
 # FRONTEND_URL="http://localhost:7777"
 FRONTEND_URL="https://loushop-react-prod.herokuapp.com/"
-PRISMA_SECRET="un432æ.asd^23"
+PRISMA_SECRET="un432æ.asd^23a"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_test_Uo6an5gsS73lAjfaHgdNjwBM"
 PORT=4444
