--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,7 +48,7 @@
     "jest-transform-graphql": "^2.1.0"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
+    "setupTestFrameworkScriptFile": "<rootDir>/jest.js",
     "testPathIgnorePatterns": [
       "<rootDir>/.next/",
       "<rootDir>/node_modules/"
